DFS-6605, DFS-6606, DFS-6600, DFS-6591 - added new tab icon to clm buttons, fixed clm sidebar styles, fixed width for popup modals and fixed squished image (#1075)

--- a/pkg/main/default/aura/CLMChecklist/CLMChecklist.css
+++ b/pkg/main/default/aura/CLMChecklist/CLMChecklist.css
@@ -9,7 +9,7 @@
 }
 
 .THIS .ds-button-width {
-  width: 10rem;
+  width: 11rem;
 }
 
 .THIS .ds-grey {
