--- a/pkg/main/default/aura/CLMSidebar/CLMSidebar.css
+++ b/pkg/main/default/aura/CLMSidebar/CLMSidebar.css
@@ -9,3 +9,6 @@
     font-weight: bold;
     box-shadow: inset 0.25rem 0 0 rgba(0, 112, 210, 1);
 }
+.THIS .ds-nav-vertical-action{
+    color: #000000;
+}
